Starting on starting

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                 <span id="player-count"></span>
                 <div id="host-controls" style="display:none">
                     <p>You are the lobby host, click start when ready.</p>
-                    <a href="#lobby-start" class="ui-btn" data-transition="slide">Start Game</a>
+                    <a href="#" id="lobby-start" class="ui-btn" data-transition="slide">Start Game</a>
                 </div>
                 <div id="not-host">
                     <p>Waiting for host to start game...</p>
