Starting countdown, gameplay container

--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,21 @@
                 </div>
             </div>
         </div>
+        <div data-role="page" id="starting">
+            <div data-role="header">
+                <h1>STARTING!</h1>
+            </div>
+            <div class="ui-content">
+                <div id="starting-countdown">3</div>
+            </div>
+        </div>
+        <div data-role="page" id="gameplay">
+            <div data-role="header">
+                <h1>GO!</h1>
+            </div>
+            <div class="ui-content">
+                Question... and stuff :)
+            </div>
+        </div>
     </body>
 </html>
