Display the first question.. kind of

--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,90 @@
 <!doctype html>
 <html>
-    <head>
-        <title>MATHRACE</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-        <link rel="stylesheet" href="styles.css" />
-        <script>window.location.hash='';</script>
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-        <script src="scripts.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-    </head>
-    <body>
-        <div data-role="page" id="main">
-            <div data-role="header">
-                <h1>MAIN MENU</h1>
+
+<head>
+    <title>MATHRACE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <script>
+        window.location.hash = '';
+    </script>
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script src="scripts.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+</head>
+
+<body>
+    <div data-role="page" id="main">
+        <div data-role="header">
+            <h1>MAIN MENU</h1>
+        </div>
+        <div class="ui-content">
+            <h3>Open Lobbies</h3>
+            <ul id="lobby-list" data-role="listview" data-inset="true">
+                <!-- <li><a href="#">Example</a></li> -->
+            </ul>
+            <a href="#create" class="ui-btn" data-transition="slide">Create Lobby</a>
+        </div>
+    </div>
+    <div data-role="page" id="create">
+        <div data-role="header" data-add-back-btn="true">
+            <h1>CREATE LOBBY</h1>
+        </div>
+        <div class="ui-content">
+            <h3>Lobby Options</h3>
+            <form id="create-lobby">
+                <label for="lobby-name">Lobby name:</label>
+                <input type="text" name="lobby-name" id="lobby-name" value="" data-clear-btn="true" maxlength="15">
+                <label for="num-questions">Number of Questions</label>
+                <input type="range" name="num-questions" id="num-questions" min="5" max="50" step="5" value="20">
+                <input type="submit" id="btn-create-lobby" class="ui-btn" value="Create Lobby">
+            </form>
+        </div>
+    </div>
+    <div data-role="page" id="pre-game">
+        <div data-role="header">
+            <h1>PRE-GAME</h1>
+        </div>
+        <div class="ui-content">
+            <h3 id="lobby-name-container"></h3>
+            <span id="player-count"></span>
+            <div id="host-controls" style="display:none">
+                <p>You are the lobby host, click start when ready.</p>
+                <a href="#" id="lobby-start" class="ui-btn" data-transition="slide">Start Game</a>
             </div>
-            <div class="ui-content">
-                <h3>Open Lobbies</h3>
-                <ul id="lobby-list" data-role="listview" data-inset="true">
-                    <!-- <li><a href="#">Example</a></li> -->
-                </ul>
-                <a href="#create" class="ui-btn" data-transition="slide">Create Lobby</a>
+            <div id="not-host">
+                <p>Waiting for host to start game...</p>
             </div>
         </div>
-        <div data-role="page" id="create">
-            <div data-role="header" data-add-back-btn="true">
-                <h1>CREATE LOBBY</h1>
+    </div>
+    <div data-role="page" id="starting">
+        <div data-role="header">
+            <h1>STARTING!</h1>
+        </div>
+        <div class="ui-content">
+            <div id="starting-countdown">3</div>
+        </div>
+    </div>
+    <div data-role="page" id="gameplay">
+        <div data-role="header">
+            <h1>GO!</h1>
+        </div>
+        <div class="ui-content">
+            <div class="ui-body ui-body-a ui-corner-all">
+                <p id="game-question">X + Y</p>
             </div>
-            <div class="ui-content">
-                <h3>Lobby Options</h3>
-                <form id="create-lobby">
-                    <label for="lobby-name">Lobby name:</label>
-                    <input type="text" name="lobby-name" id="lobby-name" value="" data-clear-btn="true" maxlength="15">
-                    <label for="num-questions">Number of Questions</label>
-                    <input type="range" name="num-questions" id="num-questions" min="5" max="50" step="5" value="20">
-                    <input type="submit" id="btn-create-lobby" class="ui-btn" value="Create Lobby">
-                </form>
+            <div class="ui-grid-a">
+                <div class="ui-block-a"><a id="game-choice-1" class="gameplay-choice ui-shadow ui-btn ui-corner-all">A</a></div>
+                <div class="ui-block-b"><a id="game-choice-2" class="gameplay-choice ui-shadow ui-btn ui-corner-all">B</a></div>
+            </div>
+            <div class="ui-grid-a">
+                <div class="ui-block-a"><a id="game-choice-3" class="gameplay-choice ui-shadow ui-btn ui-corner-all">C</a></div>
+                <div class="ui-block-b"><a id="game-choice-4" class="gameplay-choice ui-shadow ui-btn ui-corner-all">D</a></div>
             </div>
         </div>
-        <div data-role="page" id="pre-game">
-            <div data-role="header">
-                <h1>PRE-GAME</h1>
-            </div>
-            <div class="ui-content">
-                <h3 id="lobby-name-container"></h3>
-                <span id="player-count"></span>
-                <div id="host-controls" style="display:none">
-                    <p>You are the lobby host, click start when ready.</p>
-                    <a href="#" id="lobby-start" class="ui-btn" data-transition="slide">Start Game</a>
-                </div>
-                <div id="not-host">
-                    <p>Waiting for host to start game...</p>
-                </div>
-            </div>
-        </div>
-        <div data-role="page" id="starting">
-            <div data-role="header">
-                <h1>STARTING!</h1>
-            </div>
-            <div class="ui-content">
-                <div id="starting-countdown">3</div>
-            </div>
-        </div>
-        <div data-role="page" id="gameplay">
-            <div data-role="header">
-                <h1>GO!</h1>
-            </div>
-            <div class="ui-content">
-                Question... and stuff :)
-            </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
