Starting on advancing through the game

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     </div>
     <div data-role="page" id="gameplay">
         <div data-role="header">
-            <h1>GO!</h1>
+            <h1 id="question-num"></h1>
         </div>
         <div class="ui-content">
             <div class="ui-body ui-body-a ui-corner-all">
