Show client position relative to leader
Note: there is a mismatch between remaining on client and server, fixing
that after this

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,9 @@
             <h1 id="question-num"></h1>
         </div>
         <div class="ui-content">
+            <div class="ui-body ui-body-c ui-corner-all">
+                <p id="game-position"></p>
+            </div>
             <div class="ui-body ui-body-a ui-corner-all">
                 <p id="game-question">X + Y</p>
             </div>
