Winning and losing

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,25 @@
             </div>
         </div>
     </div>
+    <div data-role="page" id="loser">
+        <div data-role="header">
+            <h1>NICE TRY!</h1>
+        </div>
+        <div class="ui-content centered">
+            <h3>You were <span id="loss-amount">X</span> questions behind the leader.</h3>
+            <h3>Try again?</h3>
+            <a id="loser-reload" href="#" class="ui-btn" data-transition="slide">Back to Main Menu</a>
+        </div>
+    </div>
+    <div data-role="page" id="winner">
+        <div data-role="header">
+            <h1>YOU WON!</h1>
+        </div>
+        <div class="ui-content centered">
+            <h3>Great job! Want to play again?</h3>
+            <a id="winner-reload" href="#" class="ui-btn" data-transition="slide">Back to Main Menu</a>
+        </div>
+    </div>
 </body>
 
 </html>
