Show a message when no lobbies are open
Next up, remove finished games from game list

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
         <div class="ui-content">
             <h3>Open Lobbies</h3>
             <ul id="lobby-list" data-role="listview" data-inset="true">
-                <!-- <li><a href="#">Example</a></li> -->
             </ul>
+            <div id="no-open-lobbies" class="ui-body ui-body-a ui-corner-all" style="display: none">
+                <p>No lobbies available.</p>
+            </div>
             <a href="#create" class="ui-btn" data-transition="slide">Create Lobby</a>
         </div>
     </div>
