--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <div data-role="page" id="blank">
+        <div data-role="header">
+            <h1>ONE MOMENT</h1>
+        </div>
+    </div>
     <div data-role="page" id="main">
         <div data-role="header">
             <h1>MAIN MENU</h1>
