Added comment block to code files

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
+<!--
+    John Kusner
+    jjk320@lehigh.edu
+    CSE 264
+    Final Project
+-->
 <html>
-
 <head>
     <title>MATHRACE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
